--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,186 +8,80 @@
     android:backgroundTint="#D6DBF4"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/playerX"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Jogador X"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/playerXScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:text="0"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@+id/playerX"
-        app:layout_constraintTop_toBottomOf="@+id/playerX" />
-
-    <TextView
-        android:id="@+id/playerO"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
-        android:text="Jogador O"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/playerOScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="40dp"
-        android:text="0"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="@+id/playerO"
-        app:layout_constraintTop_toBottomOf="@+id/playerO" />
-
-    <TextView
-        android:id="@+id/playerStatus"
+    <ImageView
+        android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Placar zerado"
-        android:textAlignment="center"
+        android:src="@drawable/jogodavelha_logo"
+        android:maxWidth="128dp"
+        android:maxHeight="128dp"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:adjustViewBounds="true"
+    />
+
+
+    <TextView
+        android:id="@+id/playerXLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="192dp"
+        android:text="Nome do jogador X"
         android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerXScore" />
-
-    <Button
-        android:id="@+id/btn_0"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerStatus" />
+        app:layout_constraintTop_toTopOf="@id/logo"
+    />
 
-    <Button
-        android:id="@+id/btn_1"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_0"
-        app:layout_constraintTop_toTopOf="@id/btn_0" />
-
-    <Button
-        android:id="@+id/btn_2"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="22dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_1"
-        app:layout_constraintTop_toTopOf="@id/btn_1" />
-
-    <Button
-        android:id="@+id/btn_3"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@id/btn_0"
-        app:layout_constraintTop_toBottomOf="@id/btn_0" />
-
-    <Button
-        android:id="@+id/btn_4"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_3"
-        app:layout_constraintTop_toBottomOf="@id/btn_1" />
-
-    <Button
-        android:id="@+id/btn_5"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="22dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_4"
-        app:layout_constraintTop_toBottomOf="@id/btn_2" />
-
-    <Button
-        android:id="@+id/btn_6"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@id/btn_3"
-        app:layout_constraintTop_toBottomOf="@id/btn_3" />
-
-    <Button
-        android:id="@+id/btn_7"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_6"
-        app:layout_constraintTop_toBottomOf="@id/btn_4" />
-
-    <Button
-        android:id="@+id/btn_8"
-        android:layout_width="112dp"
-        android:layout_height="112dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="22dp"
-        android:backgroundTint="#413f43"
-        android:textColor="#ffffff"
-        android:textSize="60sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@id/btn_7"
-        app:layout_constraintTop_toBottomOf="@id/btn_5" />
-
-    <Button
-        android:id="@+id/resetGame"
+    <EditText
+        android:id="@+id/playerXName"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:backgroundTint="#4C3D5A"
-        android:text="Recomeçar"
-        android:textColor="#ffffff"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:hint="Inserir nome..."
+        android:textColor="#444"
+        app:layout_constraintTop_toBottomOf="@id/playerXLabel"
+        app:layout_constraintLeft_toLeftOf="@id/playerXLabel"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+    />
+
+    <TextView
+        android:id="@+id/playerOLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Nome do jogador O"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_6" />
+        app:layout_constraintLeft_toLeftOf="@id/playerXLabel"
+        app:layout_constraintTop_toBottomOf="@id/playerXName"
+    />
+
+    <EditText
+        android:id="@+id/playerOName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:hint="Inserir nome..."
+        android:textColor="#444"
+        app:layout_constraintTop_toBottomOf="@id/playerOLabel"
+        app:layout_constraintLeft_toLeftOf="@id/playerOLabel"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+    />
+
+    <Button
+        android:id="@+id/startGameButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Iniciar Jogo"
+        app:layout_constraintTop_toBottomOf="@+id/playerOName"
+        android:layout_marginTop="64dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+    />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
